# satori

./: .gitignore  .satoriignore  AGENTS.md  AGENTS.md.backup.withGITNEXUS  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SATORI_PITCH_DECK.md  SATORI_PITCH_DECK_SHORT.md  SECURITY.md  THIRD_PARTY.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  satori_remediation_backlog.v2.yaml  server.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
docs/: ARCHITECTURE.md  INDEXING_LOCK_HARDENING_PLAN.md  INDEX_STATE_STABILITY_PLAN.md  LANGUAGE_CAPABILITY_MATRIX_AND_SYMBOL_EXTRACTOR_HARNESS_PLAN.md  LAUNCH_CHECKLIST.md  OPERATIONAL_TRUST_PRODUCT_PLAN.md  README.md  RELATIONSHIP_BACKED_NAVIGATION_AND_SQLITE_STORE_PLAN.md  RELEASING.md  SATORI_BRIDGE_RELIABILITY_HARDENING_PLAN.md  SATORI_CLI_IMPLEMENTATION_PLAN.md  SATORI_END_TO_END_FEATURE_BEHAVIOR_SPEC.md  SATORI_FEATURES_AND_USE_CASES.md  SATORI_REPO_LEARNING_ROADMAP.md  SEARCH_SIDE_IGNORE_GUIDANCE_HARDENING_PLAN.md  SNAPSHOT_MANAGER_HARDENING_PLAN.md  SYMBOL_OWNED_RETRIEVAL_IMPLEMENTATION_PLAN.md
experiments/potion-l0-l1/: Cargo.toml  rust-toolchain.toml
experiments/potion-l0-l1/fixtures/: fixture-inputs.json  inference-contract.canonical.json  reference-fixtures.json
experiments/potion-l0-l1/src/: lib.rs  main.rs
experiments/potion-l0-l1/tools/: network_guard.c
satori-landing/: architecture.html  index.html  package.json  robots.txt  sitemap.xml  style.css
scripts/: build-benchmark.js  check-mcp-version-bump.sh  check-version-freshness.mjs  (+24 more)
(+129 files in other folders)
